--- a/style.css
+++ b/style.css
@@ -27,7 +27,10 @@ th {
 }
 
 body {
-  margin: 50px;
+  margin-left: 50px;
+  margin-top: 20px;
+  margin-right: 50px;
+  margin-bottom: 50px;
 }
 
 .settingsdiv {
