--- a/style.css
+++ b/style.css
@@ -27,11 +27,55 @@ th {
 
 @media only screen and (min-width: 768px) {
   body {
-    margin-top: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 5px;
+    margin-left: 150px;
+    margin-right: 150px;
     margin-bottom: 50px;
   }
+}
+
+.youdontknow tbody tr td {
+  padding-right: 20px;
+  padding-bottom: 5px;
+}
+
+.main-menu {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  outline-color: rgb(102, 102, 102);
+  background-color: rgb(249, 249, 249);
+  border-top-color: rgb(220, 220, 220);
+  border-top: 1px solid #DCDCDC;
+  text-align: center;
+}
+
+.main-menu-text {
+  margin-left: 15%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  vertical-align: middle;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 1px;
+  /* the same as your div height */
+}
+
+.main-menu-text a {
+  text-align: center;
+  padding-right: 20px;
+}
+
+.description {
+  margin-top: 50px;
+  margin-left: 100px;
+  margin-right: 50px;
+  margin-bottom: 20px;
+  font-size: 12px;
+}
+
+.description p {
+  font-size: 16px;
+  color: #666;
 }
 
 input[type=checkbox] {
