--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Open Sans', sans-serif;
   color: #666;
+  margin: 0;
 }
 
 table {
@@ -25,13 +26,42 @@ th {
   letter-spacing: 0;
 }
 
+.bodydiv {
+  margin-top: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 50px;
+}
+
 @media only screen and (min-width: 768px) {
-  body {
+  .bodydiv {
     margin-top: 5px;
     margin-left: 150px;
     margin-right: 150px;
     margin-bottom: 50px;
   }
+}
+
+.description {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 3%;
+  margin-right: 3%;
+  font-size: 12px;
+}
+
+@media only screen and (min-width: 768px) {
+  .description {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+}
+
+.description p {
+  font-size: 16px;
+  color: #666;
 }
 
 .youdontknow tbody tr td {
@@ -55,27 +85,12 @@ th {
   padding-top: 10px;
   vertical-align: middle;
   text-align: center;
-  vertical-align: middle;
   line-height: 1px;
   /* the same as your div height */
 }
 
 .main-menu-text a {
-  text-align: center;
   padding-right: 20px;
-}
-
-.description {
-  margin-top: 50px;
-  margin-left: 100px;
-  margin-right: 50px;
-  margin-bottom: 20px;
-  font-size: 12px;
-}
-
-.description p {
-  font-size: 16px;
-  color: #666;
 }
 
 input[type=checkbox] {
@@ -102,9 +117,15 @@ input[type=checkbox] {
   border: 1px solid #F0F0F0;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
   padding-bottom: 10px;
+  margin-top: 20px;
 }
 
 .settingsdiv thead tr th {
+  vertical-align: top;
+  padding: 8px;
+}
+
+.settingsdiv tbody tr td {
   vertical-align: top;
   padding: 8px;
 }
