--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   color: #666;
   margin: 0;
+  min-width: 1000px;
 }
 
 table {
@@ -33,7 +34,7 @@ th {
   margin-bottom: 50px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1000px) {
   .bodydiv {
     margin-top: 5px;
     margin-left: 150px;
@@ -50,7 +51,7 @@ th {
   font-size: 12px;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 1000px) {
   .description {
     margin-top: 30px;
     margin-bottom: 30px;
