--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,5 @@
-/* open-sans-300 - latin */
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Open Sans Light'), local('OpenSans-Light'), url('fonts/open-sans-v15-latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-  url('fonts/open-sans-v15-latin-300.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* open-sans-regular - latin */
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url('fonts/open-sans-v15-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-  url('fonts/open-sans-v15-latin-regular.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* open-sans-600 - latin */
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url('fonts/open-sans-v15-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-  url('fonts/open-sans-v15-latin-600.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* open-sans-700 - latin */
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 700;
-  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('fonts/open-sans-v15-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-  url('fonts/open-sans-v15-latin-700.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
-/* open-sans-800 - latin */
-
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 800;
-  src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url('fonts/open-sans-v15-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
-  url('fonts/open-sans-v15-latin-800.woff') format('woff');
-  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-
 body {
-  font-family: 'Open Sans', sans-serif;
-  color: #666;
+  font-family: 'Open Sans';
   margin: 0;
   min-width: 1000px;
 }
@@ -65,6 +9,10 @@ table {
   border-spacing: 0;
 }
 
+table p {
+  margin: auto;
+}
+
 thead {
   background: #FAFAFA;
 }
@@ -72,13 +20,10 @@ thead {
 th {
   padding-right: 10px;
   padding-left: 0;
-  color: #666;
-  border-bottom: 1px solid #F0F0F0;
-  border-bottom-color: rgb(240, 240, 240);
+  color: #5b5b5b;
   text-align: left;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
   font-size: 11px;
-  font-weight: 400;
   letter-spacing: 0;
 }
 
@@ -117,7 +62,7 @@ th {
 
 .description p {
   font-size: 16px;
-  color: #666;
+  color: #5b5b5b;
 }
 
 .youdontknow tbody tr td {
@@ -127,7 +72,7 @@ th {
 
 .main-menu-link {
   text-decoration: none;
-  color: #666;
+  color: #5b5b5b;
 }
 
 .main-menu {
@@ -199,10 +144,11 @@ input[type=checkbox] {
   margin-top: 20px;
 }
 
-.settingsdiv thead tr th {
+.settingsdiv thead>tr>th {
   vertical-align: top;
   padding: 8px;
   font-size: 18px;
+  border-bottom: 1px solid #F0F0F0;
 }
 
 .settingsdiv tbody tr td {
@@ -219,18 +165,33 @@ input[type=checkbox] {
   padding: 0;
 }
 
-.itemsTable thead tr th {
+.itemsTable>thead>tr>th {
+  border-bottom: 1px solid #F0F0F0;
   vertical-align: top;
   padding: 8px;
   font-size: 18px;
+  background: #FAFAFA;
+}
+
+.tryFiltering {
+  font-size: 18px;
+  font-weight: bold;
+  color: #12709e;
+}
+
+.tryFiltering span {
+  font-size: 28px;
+  font-weight: bold;
+  color: #12709e;
 }
 
 .filterselect {
-  border: none;
+  border-style: solid;
+  border-width: 0;
+  background-color: #FAFAFA;
   font-size: 18px;
-  color: #666;
   width: 120px;
-  background: #FAFAFA;
+  color: #5b5b5b;
 }
 
 .detailwindow {
@@ -243,17 +204,9 @@ h3 {
   font-weight: 900;
 }
 
-.americanexpress {
-  height: auto;
-  width: auto;
-  max-height: 50px;
-  display: block;
-}
-
 .priceTiers {
   font-size: 18px;
-  font-weight: 700;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
   letter-spacing: .1px;
   text-rendering: optimizeLegibility;
   padding-left: 8px;
@@ -286,11 +239,10 @@ h3 {
 
 p {
   display: block;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans';
   font-size: 11px;
   font-weight: 500;
   letter-spacing: .1px;
-  margin: auto;
 }
 
 h1, h2, h3, h4 {
