--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,115 @@
+/* open-sans-300 - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Open Sans Light'), local('OpenSans-Light'), url('./fonts/open-sans-v15-latin-ext_latin-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-300.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-300italic - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: italic;
+  font-weight: 300;
+  src: local('Open Sans Light Italic'), local('OpenSans-LightItalic'), url('./fonts/open-sans-v15-latin-ext_latin-300italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-300italic.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-regular - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url('./fonts/open-sans-v15-latin-ext_latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-regular.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-italic - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Open Sans Italic'), local('OpenSans-Italic'), url('./fonts/open-sans-v15-latin-ext_latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-italic.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-600 - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: normal;
+  font-weight: 600;
+  src: local('Open Sans SemiBold'), local('OpenSans-SemiBold'), url('./fonts/open-sans-v15-latin-ext_latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-600.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-600italic - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: italic;
+  font-weight: 600;
+  src: local('Open Sans SemiBold Italic'), local('OpenSans-SemiBoldItalic'), url('./fonts/open-sans-v15-latin-ext_latin-600italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-600italic.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-700 - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url('./fonts/open-sans-v15-latin-ext_latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-700.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-700italic - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url('./fonts/open-sans-v15-latin-ext_latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-700italic.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-800 - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: normal;
+  font-weight: 800;
+  src: local('Open Sans ExtraBold'), local('OpenSans-ExtraBold'), url('./fonts/open-sans-v15-latin-ext_latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-800.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* open-sans-800italic - latin-ext_latin */
+
+@font-face {
+  font-family: 'Open Sans2';
+  font-style: italic;
+  font-weight: 800;
+  src: local('Open Sans ExtraBold Italic'), local('OpenSans-ExtraBoldItalic'), url('./fonts/open-sans-v15-latin-ext_latin-800italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+  url('./fonts/open-sans-v15-latin-ext_latin-800italic.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
 body {
-  font-family: 'Open Sans';
+  font-family: 'Open Sans2', sans-serif;
   margin: 0;
   min-width: 1000px;
 }
@@ -22,7 +132,7 @@ th {
   padding-left: 0;
   color: #5b5b5b;
   text-align: left;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans2', sans-serif;
   font-size: 11px;
   letter-spacing: 0;
 }
@@ -111,7 +221,6 @@ input[type=checkbox] {
   margin-top: 4px;
   text-align: center;
   font-size: 12px;
-  font-weight: 900;
 }
 
 .qtip-img {
@@ -145,6 +254,7 @@ input[type=checkbox] {
 }
 
 .settingsdiv thead>tr>th {
+  font-weight: normal;
   vertical-align: top;
   padding: 8px;
   font-size: 18px;
@@ -202,11 +312,12 @@ input[type=checkbox] {
 h3 {
   font-size: 16px;
   font-weight: 900;
+  margin: 0;
 }
 
 .priceTiers {
   font-size: 18px;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans2', sans-serif;
   letter-spacing: .1px;
   text-rendering: optimizeLegibility;
   padding-left: 8px;
@@ -239,13 +350,12 @@ h3 {
 
 p {
   display: block;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans2', sans-serif;
   font-size: 11px;
-  font-weight: 500;
   letter-spacing: .1px;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h4 {
   margin: 0;
 }
 
