--- a/css/style.css
+++ b/css/style.css
@@ -139,7 +139,7 @@ th {
   margin-top: 5px;
   margin-left: 15px;
   margin-right: 15px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
 }
 
 @media only screen and (min-width: 1000px) {
@@ -147,7 +147,7 @@ th {
     margin-top: 5px;
     margin-left: 150px;
     margin-right: 150px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
   }
 }
 
@@ -165,7 +165,7 @@ th {
 
 @media only screen and (min-width: 1000px) {
   .description {
-    margin-top: 10px;
+    margin-top: 40px;
     margin-bottom: 10px;
     margin-left: 15%;
     margin-right: 15%;
@@ -335,7 +335,6 @@ input[type=checkbox] {
 }
 
 .filterselect {
-  border-style: solid;
   background-color: white;
   font-size: 18px;
   width: 100%;
@@ -624,4 +623,56 @@ radio {
   -webkit-box-shadow: 0 0 8px #12709e;
   box-shadow: 0 0 8px #12709e;
   border: 1px solid #12709e;
+}
+
+.lbl {
+  margin: 5px;
+  position: relative;
+  display: block;
+  height: 20px;
+  width: 50px;
+  background: #898989;
+  border-radius: 100px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.lbl:after {
+  position: absolute;
+  left: -2px;
+  top: -3px;
+  display: block;
+  width: 26px;
+  height: 26px;
+  border-radius: 100px;
+  background: #fff;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
+  content: '';
+  transition: all 0.3s ease;
+}
+
+.lbl:active:after {
+  transform: scale(1.15, 0.85);
+}
+
+.cbx:checked~label {
+  background: #6fbeb5;
+}
+
+.cbx:checked~label:after {
+  left: 30px;
+  background: #179588;
+}
+
+.cbx:disabled~label {
+  background: #d5d5d5;
+  pointer-events: none;
+}
+
+.cbx:disabled~label:after {
+  background: #bcbdbc;
+}
+
+.hidden {
+  display: none;
 }
