--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ th {
 }
 
 .bodydiv {
-  margin-top: 5px;
+  margin-top: 20px;
   margin-left: 15px;
   margin-right: 15px;
   margin-bottom: 10px;
@@ -144,9 +144,9 @@ th {
 
 @media only screen and (min-width: 1000px) {
   .bodydiv {
-    margin-top: 5px;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-top: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
     margin-bottom: 20px;
   }
 }
@@ -261,12 +261,10 @@ input[type=checkbox] {
 
 .settingsdiv {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
-  margin-top: 20px;
 }
 
 .settingsdiv thead>tr>th {
   font-weight: normal;
-  vertical-align: top;
   padding: 8px;
   font-size: 18px;
   border-bottom: 1px solid #F0F0F0;
@@ -278,22 +276,28 @@ input[type=checkbox] {
 }
 
 .filterdiv {
-  border: 2px solid #12709e;
-  margin-top: 20px;
-  position: fixed;
+  float: left;
+  height: 842px;
+  overflow-y: auto;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+}
+
+.filterdiv thead th:first-child {}
+
+.filterdiv thead th:nth-child(2) {
+  background-color: white;
+}
+
+.filterdiv thead th {}
+
+.sideBarText {
+  font-weight: bold;
 }
 
 .itemsdiv {
-  margin-top: 20px;
-  margin-left: 180px;
-  height: 870px;
+  margin-left: 295px;
+  height: 842px;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
-}
-
-.subHeader {
-  background: #12709e;
-  color: white;
 }
 
 .itemsTable>tbody>tr {
@@ -337,7 +341,6 @@ input[type=checkbox] {
 .filterselect {
   background-color: white;
   font-size: 18px;
-  width: 100%;
   color: #5b5b5b;
 }
 
@@ -374,7 +377,6 @@ h3 {
 .smallInput {
   width: 35px;
   float: left;
-  border-width: 2px;
 }
 
 .rating {
@@ -406,14 +408,12 @@ hr {
 }
 
 .rating {
-  display: inline-block;
   overflow: hidden;
 }
 
 .rating-input {
   width: 16px;
   height: 16px;
-  float: right;
   margin: 0 0 0 -16px;
   padding: 0;
   opacity: 0;
@@ -429,6 +429,7 @@ radio {
 
 .rating-star {
   display: block;
+  float: right;
   position: relative;
   width: 16px;
   height: 16px;
@@ -610,7 +611,6 @@ radio {
   -moz-box-sizing: border-box;
   border: 1px solid #BEBEBE;
   padding: 1px;
-  margin: 0px;
   -webkit-transition: all 0.30s ease-in-out;
   -moz-transition: all 0.30s ease-in-out;
   -ms-transition: all 0.30s ease-in-out;
@@ -626,15 +626,15 @@ radio {
 }
 
 .lbl {
+  float: right;
   margin: 5px;
   position: relative;
   display: block;
   height: 20px;
   width: 50px;
-  background: #898989;
+  background: #ccc;
   border-radius: 100px;
   cursor: pointer;
-  transition: all 0.3s ease;
 }
 
 .lbl:after {
@@ -645,32 +645,18 @@ radio {
   width: 26px;
   height: 26px;
   border-radius: 100px;
-  background: #fff;
-  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05);
+  background: #999999;
   content: '';
-  transition: all 0.3s ease;
-}
-
-.lbl:active:after {
-  transform: scale(1.15, 0.85);
+  transition: all 0.1s linear;
 }
 
 .cbx:checked~label {
-  background: #6fbeb5;
+  background: #599abb;
 }
 
 .cbx:checked~label:after {
   left: 30px;
-  background: #179588;
-}
-
-.cbx:disabled~label {
-  background: #d5d5d5;
-  pointer-events: none;
-}
-
-.cbx:disabled~label:after {
-  background: #bcbdbc;
+  background: #12709e;
 }
 
 .hidden {
