--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ input[type=checkbox] {
 
 .itemsdiv {
   margin-left: 295px;
-  height: 1000px;
+  height: calc(100vh - 180px);
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
 }
 
