--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ input[type=checkbox] {
 }
 
 .itemsdiv {
-  margin-left: 295px;
+  margin-left: 315px;
   height: calc(100vh - 180px);
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
 }
@@ -619,6 +619,16 @@ radio {
   -webkit-box-shadow: 0 0 8px #12709e;
   box-shadow: 0 0 8px #12709e;
   border: 1px solid #12709e;
+}
+
+.sorting_order {
+  vertical-align: middle;
+  transition: transform .8s ease;
+}
+
+.sorting_order:hover {
+  transform: rotate(180deg);
+  background-color: #e1e1e1;
 }
 
 .lbl {
