--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,7 @@ input[type=checkbox] {
 .filterdiv {
   float: left;
   overflow-y: auto;
+  height: 860px;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
 }
 
