--- a/css/style.css
+++ b/css/style.css
@@ -272,10 +272,15 @@ input[type=checkbox] {
   padding: 8px;
 }
 
+.youdontknow td {
+  vertical-align: top;
+}
+
 .filterdiv {
   float: left;
   overflow-y: auto;
-  height: 860px;
+  height: calc(-180px + 100vh);
+  width: 290px;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
 }
 
