--- a/css/style.css
+++ b/css/style.css
@@ -612,6 +612,20 @@ radio {
   justify-content: center;
 }
 
+.rating-star{
+  -webkit-transition: all 0.20s ease-in-out;
+  -moz-transition: all 0.20s ease-in-out;
+  -ms-transition: all 0.20s ease-in-out;
+  -o-transition: all 0.20s ease-in-out;
+}
+
+.first-rating-star{
+  -webkit-transition: none;
+  -moz-transition: none;
+  -ms-transition: none;
+  -o-transition: none;
+}
+
  input[type=text],  input[type=date],  input[type=datetime],  input[type=number],  input[type=search],  input[type=time],  input[type=url],  input[type=email], textarea, select {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -628,7 +642,7 @@ radio {
   float: right;
 }
 
-input[type=text]:focus,  input[type=date]:focus,  input[type=datetime]:focus,  input[type=number]:focus,  input[type=search]:focus,  input[type=time]:focus,  input[type=url]:focus,  input[type=email]:focus,  textarea:focus,  select:focus {
+ input[type=text]:focus,  input[type=date]:focus,  input[type=datetime]:focus,  input[type=number]:focus,  input[type=search]:focus,  input[type=time]:focus,  input[type=url]:focus,  input[type=email]:focus,  textarea:focus,  select:focus {
   -moz-box-shadow: 0 0 8px #12709e;
   -webkit-box-shadow: 0 0 8px #12709e;
   box-shadow: 0 0 10px #fefefe;
