--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,10 @@ th {
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
 }
 
+.filterdiv thead th:nth-child(2){
+
+}
+
 .main-menu-text {
   margin-left: 15%;
   margin-right: 15%;
@@ -276,8 +280,9 @@ input[type=checkbox] {
 
 .filterdiv {
   float: left;
-  overflow-y: auto;
-  height: calc(-180px + 100vh);
+  background-color: #3367d5;
+  padding: 5px;
+
   width: 280px;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
 }
