--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,7 @@ input[type=checkbox] {
   background-color: #fefefe;
   width: 290px;
   max-height: 805px;
+  margin-top: 15px;
   margin-left: 10px;
   padding-right: 10px;
   padding-left: 10px;
@@ -316,7 +317,7 @@ input[type=checkbox] {
 }
 
 .itemsdiv {
-  z-index: 1;
+  z-index: 0;
   max-height: 805px;
   float: right;
   flex: 1;
